# star-wars-aggregator

./: .gitignore  README.md  docker-compose.yml  readmeus.md
backend/: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  swapi_documentation.md
backend/alembic/: env.py
backend/alembic/versions/: 27f5041d3872_add_unique_constraint_to_swapi_resource.py  d2df7a02d1eb_create_initial_swapi_resource_table.py
backend/scripts/: run_etl.py
backend/scripts/etl/: data_models.py  loader.py  normalizer.py  swapi_client.py
backend/src/swapi_search/: main.py
backend/src/swapi_search/api/v1/: dependencies.py  registry.py  schemas.py
backend/src/swapi_search/api/v1/endpoints/: resources.py  search.py
backend/src/swapi_search/core/: config.py  logging.py
backend/src/swapi_search/db/: models.py  session.py
backend/src/swapi_search/repositories/: resource.py
backend/src/swapi_search/search/: base.py  elasticsearch.py  postgres.py
backend/tests/: conftest.py
backend/tests/api/: test_search_endpoint.py
backend/tests/etl/: test_normalizer.py
frontend/: .dockerignore  Dockerfile  eslint.cjs  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: App.tsx  main.tsx  provider.tsx  router.tsx
frontend/src/config/: index.ts
frontend/src/lib/: axios.ts
frontend/src/shared/api/: client.ts
frontend/src/shared/hooks/: useDebouncedCallback.ts
frontend/src/shared/lib/: utils.ts
frontend/src/shared/ui/: Card.tsx  ErrorMessage.tsx  LoadingSpinner.tsx  Pagination.tsx  StatPill.tsx
(+33 files in other folders)
