[tool.poetry]
name = "swapi-search-service"
version = "0.1.0"
description = "Backend for searching Star Wars data."
authors = ["Pedro Mussi phpmussi@gmail.com"]
readme = "README.md"
packages = [{include = "swapi_search", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = {extras = ["dotenv"], version = "^2.7.1"}
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
httpx = "^0.27.0"
tenacity = "^8.2.3"
python-json-logger = "^2.0.7"
alembic = "^1.16.3"
boto3 = "^1.39.4"
mangum = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.23.6"
black = "^24.4.2"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"